# spin-llm-explorer

./: .editorconfig  .gitignore  Cargo.toml  insert-test-data.sql  migration.sql  notes.txt  sample-api.yaml  sample-payload.json  sample-queries.sql  spin.toml
api/: Cargo.toml  test.sh
api/apps/: Cargo.toml
api/apps/src/: lib.rs
api/completions/: Cargo.toml
api/completions/src/: lib.rs
api/shared/: Cargo.toml
api/shared/src/: lib.rs  model.rs  prompts.rs  tracking.rs
api/src/: lib.rs
app-api/: Cargo.toml  test.sh
app-api/src/: lib.rs
mock/: db.json  index.js  package-lock.json  package.json
web/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json
web/src/: App.vue  main.ts
web/src/components/nav/: NavLink.vue
web/src/router/: index.ts
web/src/stores/: apps.ts  completions.ts
web/src/types/: global.d.ts
web/src/utils/: api.ts
web/src/views/: AboutView.vue  AppForm.vue  AppHome.vue  AppView.vue  AppsView.vue  HomeView.vue
