[package]
name = "apps-api"
authors = ["Justin Pflueger <justin.pflueger@fermyon.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "llm-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
serde_qs = "0.12.0"
shared = { path = "../shared" }
